@@ -68,8 +68,12 @@
 
                 <!-- <img src="static/images/zenlike/pic1.jpg" class="left" alt="A chinese lion statue" /> -->
                 <img width="20%" src='image_raw?special=latest' class="left" alt="My uploaded image"/>
-				<p>Zenlike<sup>1.0</sup> is a free, lightweight, tableless, fluid W3C-compliant website design by <a href="http://www.nodethirtythree.com/">NodeThirtyThree Design</a>. All photos came from <a href="http://www.pdphoto.org/">PDPhoto</a> and the background texture is from <a href="http://www.mayang.com/textures/">Mayang's texture site</a>. You're free to dissect, manipulate and use it to your heart's content. We only ask that you link back to <a href="http://www.nodethirtythree.com/">our site</a> in some way. If you find this design useful, feel free to let us know :)</p>				<p>You can find more of our free work at this site or <a href="http://www.nodethirtythree.com/">our site</a>, or some of our commercial work on <a href="http://www.4templates.com/?aff=n33">4Templates.com</a>, a commercial website template site.</p>
-
+                <form action='add_comment' method='POST'
+                    enctype='application/x-www-form-urlencoded'>
+                    Comment: <input type='text' name='comment'/>
+                    <input type='submit' value='Submit'/>
+                </form>
+			    <li><a href="view_comments">View Comments</a></li>
 				<!-- Normal content area end -->
 			</div>
 		</div>
